HTML-CSS_estudo MediaQuery  v3
Terminando os exercícios da aula 2 e o da aula 3. Aprendendo a definir uma Media Feature atráves do CSS

--- a/Exercicìos/md4/ex026/m002/style/landscape.css
+++ b/Exercicìos/md4/ex026/m002/style/landscape.css
@@ -1,1 +1,8 @@
 @charset "UTF-8";
+
+/* Configurações da Tela deitada */
+
+body{
+    background: gray url(../image/cev-landscape.jpg) left center no-repeat fixed;
+    background-size: cover;
+}
