--- a/Exercicìos/md4/ex026/m002/style/style.css
+++ b/Exercicìos/md4/ex026/m002/style/style.css
@@ -1,1 +1,28 @@
 @charset "UTF-8";
+
+/* Configurações Geral */
+
+*{
+    margin: 0px;
+    padding: 0px;
+    text-decoration: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+html, body{
+    width: 100vw;
+    height: 100vh;
+    background-color: gainsboro;
+}
+
+h1{
+    color: white;
+    font: normal bolder 5em Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+p{
+    color: white;
+    text-align: justify;
+}
