--- a/Exercicìos/md4/ex026/m004/style/style.css
+++ b/Exercicìos/md4/ex026/m004/style/style.css
@@ -11,7 +11,6 @@
 }
 
 html{
-    width: 100vw;
     height: 100vh;
 }
 
@@ -23,13 +22,14 @@ body{
 main{
     background-color: rgba(255, 255, 255, 0.377);
     border-radius: 5px;
-    width: 90vw;
+    width: 400px;
     margin: auto;
+    margin-top: 40px;
     padding: 10px;
 }
 
 main h1{
-    font: normal bolder 3em Arial, Helvetica, sans-serif;
+    font: normal bolder 3em;
     text-align: center;
     margin-top: 8px;
 }
