--- a/Exercicìos/md4/ex026/m005/style/style.css
+++ b/Exercicìos/md4/ex026/m005/style/style.css
@@ -5,8 +5,85 @@
     padding: 0px;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 html{
     height: 100vh;
+}
+
+body{
+    background-color: lightgrey;
+}
+
+header{
+    background-image: linear-gradient(180deg, grey, rgb(116, 116, 116));
+}
+
+header > h1{
+    color: white;
+    font: normal bolder 4.2em Arial, Helvetica, sans-serif;
+    text-align: center;
+    padding: 10px;
+}
+
+#burguer{
+    display: block;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-size: 2.2em;
+    cursor: pointer;
+}
+
+#burguer:hover{
+    transition: 0.25s;
+    background-color: rgb(116, 116, 116);
+    color: black;
+}
+
+menu{
+    display: none;
+    position: absolute;
+    right: 0px;
+    left: 0px;
+}
+
+menu > ul{
+    list-style-type: none;
+}
+
+menu a{
+    background-color: white;
+    border: 0.5px solid black;
+    text-align: center;
+    color: black;
+    display: block;
+    padding: 10px;
+}
+
+menu a:hover{
+    transition: 0.25s;
+    background-color: black;
+    color: white;
+}
+
+main{
+    width: 90vw;
+    background-color: rgba(255, 255, 255, 0.836);
+    margin: auto;
+    padding: 25px;
+}
+
+main h2{
+    font: normal bold 2.5em Arial, Helvetica, sans-serif;
+    text-align: left;
+    padding-bottom: 35px;
+}
+
+main p{
+    text-align: justify;
+    text-indent: 10px;
+    line-height: 1.45em;
+    padding-bottom: 30px;
 }
